# 2048

./: CMakeLists.txt  README.md  main.cpp
SDL-2.0.7/include/: begin_code.h  close_code.h
core/: core.cpp  core.h  display.cpp  display.h
